force-app/main/default/objects/Gift__c/Gift__c.object-meta.xml
<CustomObject>
    <description>SEC Tracking of gifts to external Contacts</description>
    <label>Gift Request</label>
    <nameField>
        <label>Gift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gift Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>