force-app/main/default/objects/Gift__c/fields/Approval_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comment__c</fullName>
    <description>Approver Comment</description>
    <inlineHelpText>Approver Comment</inlineHelpText>
    <label>Approval Comment</label>
    <type>TextArea</type>
</CustomField>