force-app/main/default/objects/Gift__c/fields/Approval_Number__c.field-meta.xml
<CustomField>
    <fullName>Approval_Number__c</fullName>
    <description>Approval number for external vendor</description>
    <displayFormat>AP{0000}</displayFormat>
    <inlineHelpText>This is auto-generated in the format AP0000</inlineHelpText>
    <label>Approval Number</label>
    <type>AutoNumber</type>
</CustomField>