force-app/main/default/objects/Gift__c/fields/Approve_Date__c.field-meta.xml
<CustomField>
    <fullName>Approve_Date__c</fullName>
    <description>Date gift was approved/denied</description>
    <inlineHelpText>Date gift was approved/denied</inlineHelpText>
    <label>Approve Date</label>
    <type>DateTime</type>
</CustomField>