force-app/main/default/objects/Gift__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Approver</description>
    <inlineHelpText>Approver</inlineHelpText>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_By</relationshipName>
    <type>Lookup</type>
</CustomField>