force-app/main/default/objects/Gift__c/fields/Batch_Guid__c.field-meta.xml
<CustomField>
    <fullName>Batch_Guid__c</fullName>
    <description>Batch Guid used to group the gifts back to their original submission batch</description>
    <label>Batch Guid</label>
    <length>36</length>
    <type>Text</type>
</CustomField>