force-app/main/default/objects/Gift__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>Line of Business</description>
    <inlineHelpText>Line of Business to be billed</inlineHelpText>
    <label>Business Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>