force-app/main/default/objects/Gift__c/fields/Client_Billable__c.field-meta.xml
<CustomField>
    <fullName>Client_Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Client Billable?</description>
    <inlineHelpText>Is the Client Billable for this gift?</inlineHelpText>
    <label>Is Client Billable?</label>
    <type>Checkbox</type>
</CustomField>