force-app/main/default/objects/Gift__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comments for the gift</description>
    <inlineHelpText>Comments for the gift</inlineHelpText>
    <label>Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>