force-app/main/default/objects/Gift__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Currency that the gift will be purchased in.</description>
    <inlineHelpText>Currency that the gift will be purchased in.</inlineHelpText>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>U.S. Dollar</fullName>
                <default>true</default>
                <label>U.S. Dollar</label>
            </value>
            <value>
                <fullName>Euro (not in France)</fullName>
            </value>
            <value>
                <fullName>Euro (in France)</fullName>
            </value>
            <value>
                <fullName>British Pound</fullName>
            </value>
            <value>
                <fullName>Hong Kong Dollar</fullName>
            </value>
            <value>
                <fullName>Australian Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>