force-app/main/default/objects/Gift__c/fields/Desired_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date the gift will be purchased by.</description>
    <inlineHelpText>Date the gift will be purchased by.</inlineHelpText>
    <label>Desired Date</label>
    <type>Date</type>
</CustomField>