force-app/main/default/objects/Gift__c/fields/ER_Num__c.field-meta.xml
<CustomField>
    <fullName>ER_Num__c</fullName>
    <description>Extensity ER number</description>
    <inlineHelpText>Extensity ER number</inlineHelpText>
    <label>ER Num</label>
    <length>20</length>
    <type>Text</type>
</CustomField>