force-app/main/default/objects/Gift__c/fields/ER_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>ER_Submit_Date__c</fullName>
    <description>Date of the ER number</description>
    <inlineHelpText>Date of the ER number</inlineHelpText>
    <label>ER Submit Date</label>
    <type>DateTime</type>
</CustomField>