force-app/main/default/objects/Gift__c/fields/fApproval_Number__c.field-meta.xml
<CustomField>
    <fullName>fApproval_Number__c</fullName>
    <formula>IF( ISPICKVAL(Approved__c, &apos;Pending&apos;), &apos;Pending&apos;, IF( ISPICKVAL(Approved__c, &apos;Denied&apos;), &apos;Denied&apos;, Approval_Number__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Number</label>
    <type>Text</type>
</CustomField>