force-app/main/default/objects/Gift__c/fields/Gift_Next_Year_Value__c.field-meta.xml
<CustomField>
    <fullName>Gift_Next_Year_Value__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Next Year Gift Value</description>
    <label>Gift Next Year Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>