force-app/main/default/objects/Gift__c/fields/Gift_Type__c.field-meta.xml
<CustomField>
    <fullName>Gift_Type__c</fullName>
    <description>Type of gift</description>
    <inlineHelpText>Type of gift</inlineHelpText>
    <label>Gift Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charitable Contribution</fullName>
            </value>
            <value>
                <fullName>Closing Party Client Gifts</fullName>
            </value>
            <value>
                <fullName>Gifts: Customers</fullName>
            </value>
            <value>
                <fullName>Gifts: Customers Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>