force-app/main/default/objects/Gift__c/fields/Gift_Value__c.field-meta.xml
<CustomField>
    <fullName>Gift_Value__c</fullName>
    <description>The gift&apos;s market value in the specified currency excluding the cost of tax, shipping, and engraving.</description>
    <inlineHelpText>The gift&apos;s market value in the specified currency excluding the cost of tax, shipping, and engraving.</inlineHelpText>
    <label>Gift Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>