force-app/main/default/objects/Gift__c/fields/Gift_Value_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Gift_Value_Distributed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for Gift value distribution</description>
    <inlineHelpText>Gift value will be distributed between recipients if checked.</inlineHelpText>
    <label>Divide Gift Value Among All Recipients?</label>
    <type>Checkbox</type>
</CustomField>