force-app/main/default/objects/Gift__c/fields/HL_Relationship__c.field-meta.xml
<CustomField>
    <fullName>HL_Relationship__c</fullName>
    <label>HL Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>