force-app/main/default/objects/Gift__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Industry to bill against</description>
    <inlineHelpText>Industry to bill against</inlineHelpText>
    <label>Industry Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADG - Aerospace Defense and Government</fullName>
            </value>
            <value>
                <fullName>BUS - Business Services</fullName>
            </value>
            <value>
                <fullName>CFR - Consumer Food  &amp; Retail</fullName>
            </value>
            <value>
                <fullName>CORP - Corporate</fullName>
            </value>
            <value>
                <fullName>FIG - Financial Institutions</fullName>
            </value>
            <value>
                <fullName>FT - Financial Technology</fullName>
            </value>
            <value>
                <fullName>GEN - General</fullName>
            </value>
            <value>
                <fullName>HC - Healthcare</fullName>
            </value>
            <value>
                <fullName>IFA - Illiquid Financial Assets</fullName>
            </value>
            <value>
                <fullName>IG - Industrials</fullName>
            </value>
            <value>
                <fullName>M&amp;T - Media &amp; Telecom</fullName>
            </value>
            <value>
                <fullName>NRG - Energy</fullName>
            </value>
            <value>
                <fullName>OTHER - Other</fullName>
            </value>
            <value>
                <fullName>POW - Power &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>RE - Real Estate Lodging and Leisure</fullName>
            </value>
            <value>
                <fullName>SOV - Sovereigns</fullName>
            </value>
            <value>
                <fullName>TECH - Technology</fullName>
            </value>
            <value>
                <fullName>TRANS - Transportation &amp; Logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>