force-app/main/default/objects/Gift__c/fields/IsGiftValueDistributed__c.field-meta.xml
<CustomField>
    <fullName>IsGiftValueDistributed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Gift value will be distributed between recipients if checked.</inlineHelpText>
    <label>IsGiftValueDistributed</label>
    <type>Checkbox</type>
</CustomField>