force-app/main/default/objects/Gift__c/fields/Pre_Approval__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a Pre-Approval?</description>
    <inlineHelpText>Is this a Pre-Approval?</inlineHelpText>
    <label>Is Pre-Approval?</label>
    <type>Checkbox</type>
</CustomField>