force-app/main/default/objects/Gift__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product line to bill against</description>
    <inlineHelpText>Product line to bill against</inlineHelpText>
    <label>Product Line</label>
    <length>50</length>
    <type>Text</type>
</CustomField>