force-app/main/default/objects/Gift__c/fields/Reason_For_Gift__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Gift__c</fullName>
    <description>Reason for the gift</description>
    <inlineHelpText>Reason for the gift</inlineHelpText>
    <label>Reason For Gift</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>