force-app/main/default/objects/Gift__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <description>External Contact to receive gift</description>
    <inlineHelpText>External Contact to receive gift</inlineHelpText>
    <label>Recipient For Gift</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift Requests (Recipient For Gift)</relationshipLabel>
    <relationshipName>Gifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>