force-app/main/default/objects/Gift__c/fields/Recipient_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Company_Name__c</fullName>
    <description>Recipient Company (Account) Name</description>
    <formula>Recipient__r.Account.Name</formula>
    <label>Recipient Company Name</label>
    <type>Text</type>
</CustomField>