force-app/main/default/objects/Gift__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <description>Recipient Name from Contact</description>
    <formula>Recipient__r.Contact_Full_Name__c</formula>
    <label>Recipient Name</label>
    <type>Text</type>
</CustomField>