force-app/main/default/objects/Gift__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Submitted By Lookup to Contact</description>
    <label>Submitted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Gift_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>