force-app/main/default/objects/Gift__c/fields/Submitted_For__c.field-meta.xml
<CustomField>
    <fullName>Submitted_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HL Staff member giving gift</description>
    <inlineHelpText>HL Staff member giving gift</inlineHelpText>
    <label>Submitted For</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be submitted for a Houlihan Employee.</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <infoMessage>Shows only Houlihan Employees.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Submitted_For</relationshipName>
    <type>Lookup</type>
</CustomField>