force-app/main/default/objects/Gift__c/fields/Submitted_For_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitted_For_Name__c</fullName>
    <description>Submitted for name</description>
    <formula>Submitted_For__r.Contact_Full_Name__c</formula>
    <label>Submitted For Name</label>
    <type>Text</type>
</CustomField>