force-app/main/default/objects/Gift__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <description>Vendor to be used for gift.</description>
    <inlineHelpText>Vendor to be used for gift.</inlineHelpText>
    <label>Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>