force-app/main/default/objects/Gift__c/validationRules/DesiredDateFieldValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>DesiredDateFieldValidation</fullName>
    <active>true</active>
    <errorConditionFormula>Desired_Date__c - TODAY() &gt;= 365</errorConditionFormula>
    <errorMessage>Desired Date Should not be greater than one Year.</errorMessage>
</ValidationRule>