force-app/main/default/objects/Gift__c/validationRules/DesiredDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>DesiredDateValidation</fullName>
    <active>false</active>
    <description>Please enter a date that is no more than one year from today. Dates that are more than a year in the future are not valid.</description>
    <errorConditionFormula>YEAR(Desired_Date__c) &gt;  (YEAR(TODAY()) + 1)</errorConditionFormula>
    <errorMessage>Please enter a date that is no more than one year from today. Dates that are more than a year in the future are not valid.</errorMessage>
</ValidationRule>