force-app/main/default/objects/Gift__c/validationRules/GiftValueValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>GiftValueValidation</fullName>
    <active>false</active>
    <errorConditionFormula>Gift_Value__c &lt;= 0</errorConditionFormula>
    <errorMessage>Gift Value Can not be negative or 0.</errorMessage>
</ValidationRule>